--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -42,7 +42,7 @@
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
-    height: 35vh;
+    height: 37vh;
 }
 
 .shop-chairs h1, .shop-sofas h1 {
@@ -52,7 +52,7 @@
 }
 
 .shop-sofas img, .shop-chairs img {
-    height: 30vh;
+    height: 33vh;
     margin-left: 20px;
     margin-right: 20px;
 }
